# BergerDb

./: .gitignore  BergerDb.sln  CMakeLists.txt  README.md  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  launchSettings.json  resources.qrc
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/ConsoleApp1/: Program.cs
sql/: main_tables.sql
src/: main.cpp
src/Backend/BergerDB/: BergerDb.sln  README.md
src/Backend/BergerDB/BergerDb.Api/: BergerDb.Api.csproj  Dockerfile  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
src/Backend/BergerDB/BergerDb.Application/: BergerDb.Application.csproj  DependencyInjection.cs
src/Backend/BergerDB/BergerDb.Domain/: BergerDb.Domain.csproj  DependencyInjection.cs
src/BergerDb.Api/: BergerDb.Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
src/BergerDb.Api/Migrations/: MigrationExtensions.cs
src/BergerDb.Api/Properties/: launchSettings.json
src/BergerDb.Application/: BergerDb.Application.csproj  DependencyInjection.cs
src/BergerDb.Application/Customers/: CustomerMapper.cs  CustomerResponse.cs
src/BergerDb.Application/Emails/: EmailMapper.cs  EmailResponse.cs  PdfMetadataResponse.cs
src/BergerDb.Application/PaymentProcesses/: PaymentProcessMapper.cs  PaymentProcessResponse.cs
src/BergerDb.Application/Payments/: PaymentMapper.cs  PaymentResponse.cs
src/BergerDb.Application/Users/: TokenResponse.cs  UserResponse.cs
src/BergerDb.Controls/: BergerDb.Controls.csproj
src/BergerDb.Controls/TableView/: Column.cs  Table.xaml  Table.xaml.cs  TableValuePair.cs
src/BergerDb.Core/: BergerDb.Core.csproj
src/BergerDb.Core/Entities/: Entity.cs  EntityId.cs  Model.cs  ValueObject.cs
src/BergerDb.Core/Errors/: Error.cs
src/BergerDb.Core/Events/: IDomainEvent.cs
src/BergerDb.Core/Results/: Result.cs  ResultExtensions.cs  ResultT.cs
src/BergerDb.Core/Time/: SystemTimeProvider.cs
src/BergerDb.Domain/: BergerDb.Domain.csproj  DependencyInjection.cs
src/BergerDb.Domain/Abstractions/: IRepository.cs
src/BergerDb.Domain/Customers/: Customer.cs  CustomerErrors.cs  CustomerId.cs  ICustomerRepository.cs
src/BergerDb.Domain/Customers/Names/: Name.cs  (+4 more)
src/BergerDb.Domain/Emails/: Email.cs  EmailId.cs  IEmailRepository.cs
src/BergerDb.Domain/PaymentProcesses/: Billing.cs  Debiting.cs  IPaymentProcessRepository.cs  PaymentProcess.cs  PaymentProcessErrors.cs  PaymentProcessId.cs
src/BergerDb.Domain/Payments/: IPaymentsRepository.cs  Payment.cs  PaymentId.cs
src/BergerDb.Domain/PdfTemplates/: IPdfTemplateRepository.cs  PdfTemplate.cs  PdfTemplateId.cs
src/BergerDb.Domain/Users/: IUserRepository.cs  User.cs  UserErrors.cs  UserModel.cs
src/BergerDb.Infrastructure/: BergerDb.Infrastructure.csproj  DependencyInjection.cs
src/BergerDb.Infrastructure/Authorization/: AuthenticationOptions.cs  TokenResponseProvider.cs  UserIdentityProvider.cs
src/BergerDb.Infrastructure/Cryptography/: PaswordHasher.cs
src/BergerDb.Persistance/: BergerDb.Persistance.csproj  BergerDbContext.cs  DependencyInjection.cs  Repository.cs  UnitOfWork.cs
src/BergerDb.Persistance/Constants/: TableNames.cs
src/BergerDb.Persistance/Migrations/: 20241101005932_Init.Designer.cs  20241101005932_Init.cs  BergerDbContextModelSnapshot.cs
src/BergerDb.Persistance/Users/: UserConfigurations.cs  UserRepository.cs
src/BergerDb.Persistanse/: BergerDb.Persistanse.csproj  BergerDbContext.cs  DependencyInjection.cs  Repository.cs  UnitOfWork.cs
src/BergerDb.Persistanse/Customers/: CustomerConfigurations.cs  CustomerRepository.cs
src/BergerDb.Persistanse/Emails/: EmailConfiguration.cs  EmailRepository.cs
src/BergerDb.Persistanse/Migrations/: 20241230030504_Init.Designer.cs  20241230030504_Init.cs  20241231032753_Fixed_Version.Designer.cs  20241231032753_Fixed_Version.cs  20250224191350_Init.Designer.cs  20250224191350_Init.cs  BergerDbContextModelSnapshot.cs
src/BergerDb.Persistanse/PaymentProcesses/: PaymentProcessConfiguration.cs  PaymentProcessRepository.cs
src/BergerDb.Persistanse/Payments/: PaymentConfiguration.cs  PaymentRepository.cs
src/BergerDb.Persistanse/PdfTemplates/: PdfTemplateRepository.cs  PdfTemplesConfiguration.cs
src/BergerDb.Shared/: BergerDb.Shared.csproj
src/BergerDb.Shared/Entities/: Entity.cs  EntityId.cs  ValueObject.cs
src/BergerDb.Shared/Errors/: Error.cs
src/BergerDb.Shared/Events/: IDomainEvent.cs
src/BergerDb.Shared/Results/: Result.cs  ResultExtensions.cs  ResultT.cs
src/BergerDb.Shared/Time/: SystemTimeProvider.cs
src/BergerDb.UI/: App.xaml  App.xaml.cs  BergerDb.UI.csproj  MauiProgram.cs
src/BergerDb.UI/Abstractions/: ViewModel.cs
src/Domain/: CMakeLists.txt
src/Domain/include/Core/: Error.h  Result.h
src/Domain/include/Customer/: Address.h  CustomerAggregate.h  CustomerModel.h  Email.h  Name.h  Notation.h  Prefix.h  ZipCode.h
src/Domain/include/ValueObjects/: Address.h  Email.h  Name.h  Notation.h  Prefix.h  ZipCode.h
src/Domain/src/: Address.cpp  CustomerAggregate.cpp  CustomerModel.cpp  Email.cpp  Error.cpp  Name.cpp  Notation.cpp  Prefix.cpp  ZipCode.cpp
src/Frontend/berger_db/: index.html  package-lock.json  package.json
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/include/: DbClient.hpp  DbTablesService.hpp  DbWorker.hpp
src/Infrastructure/include/Features/Customer/: CustomerDbContext.hpp
src/Infrastructure/src/: CustomerDbContext.cpp  DbClient.cpp  DbTablesService.cpp  DbWorker.cpp
src/Presentation/: CMakeLists.txt
src/Presentation/include/: AppStateController.hpp  AppWindow.hpp  PageController.hpp  PageModel.hpp
src/Presentation/include/Pages/Customers/: CustomersPage.hpp  CustomersPageModel.hpp
src/Presentation/include/States/: FatalErrorState.hpp  InitializationState.hpp  NormalState.hpp
src/Presentation/src/: AppStateController.cpp  AppWindow.cpp  CustomersPage.cpp  CustomersPageModel.cpp  FatalErrorState.cpp  InitializationState.cpp  NormalState.cpp  PageController.cpp  PageModel.cpp
src/Ui/: CMakeLists.txt
src/Ui/include/Views/: MainWindow.h
src/Ui/src/: MainWindow.cpp
(+357 files in other folders)
